--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="#E2312C"
         android:onClick="ativarGincana"
-        android:text="Gincana"
+        android:text="@string/strGincana"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.714"
@@ -25,7 +25,7 @@
         android:id="@+id/textView"
         android:layout_width="412dp"
         android:layout_height="78dp"
-        android:text="Cotuca Clicker"
+        android:text="@string/strTitle"
         android:textAlignment="center"
         android:textColor="#E2312C"
         android:textSize="40sp"
@@ -40,10 +40,10 @@
         android:layout_width="316dp"
         android:layout_height="43dp"
         android:layout_marginBottom="373dp"
-        android:text="0"
+        android:text="@string/strContador"
         android:textAlignment="center"
         android:textColor="#E2312C"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="#E2312C"
         android:onClick="ativarDormindoSampaio"
-        android:text="Zz"
+        android:text="@string/strZz"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.952"
@@ -70,7 +70,7 @@
         android:id="@+id/botaoContador"
         android:layout_width="304dp"
         android:layout_height="313dp"
-        android:clickable="true"
+        android:contentDescription="@string/strDescIconCotuca"
         android:longClickable="false"
         android:onClick="btnClicar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,6 +99,7 @@
                 android:id="@+id/navigation_loja"
                 android:layout_width="96dp"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/strDescIconSeçãoLoja"
                 android:padding="10dp"
                 android:src="@drawable/loja" />
 
@@ -109,12 +110,14 @@
                 android:layout_weight="1"
                 android:background="#C7C7C8"
                 android:backgroundTint="#FF0700"
+                android:contentDescription="@string/strDescIconSeçãoHome"
                 android:src="@drawable/home" />
 
             <ImageView
                 android:id="@+id/navigation_bosses"
                 android:layout_width="96dp"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/strDescIconSeçãoBoss"
                 android:padding="10dp"
                 android:src="@drawable/bosses" />
 
@@ -127,7 +130,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Dano por segundo:"
+        android:text="@string/strDPS"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
