--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,14 @@
                 android:padding="10dp"
                 android:src="@drawable/bosses" />
 
+            <ImageView
+                android:id="@+id/navigation_online"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/strDescIconSeçãoOnline"
+                android:padding="10dp"
+                android:src="@drawable/online" />
+
         </LinearLayout>
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
